--- a/_sass/_helpers.scss
+++ b/_sass/_helpers.scss
@@ -4,6 +4,10 @@
 
 .wrap {
   @include outer-container;
+}
+
+.wrap-banner {
+  @include outer-container;
   margin-top: $banner;
 }
 
