--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -108,4 +108,4 @@ $badge-font-color              : $white;
    ========================================================================== */
 
 $masthead-height: $button-size * 2;
-$banner: 24vw;
+$banner: 426px;
